# CG-Project

First_project/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_1.txt  First_Project  cmake_install.cmake
First_project/include/: Camera.h  Include.h  Mesh.h  Object.h  Particle.h  Property.h  SmallCube.h  WiderCube.h
First_project/model/sphere/: sphere.mtl
First_project/shaders/: lamp.frag  particle.frag
First_project/shaders/Not_Used/: cube.frag  smallCube.frag  widerCube.frag
First_project/source/: Object.cpp  Particle.cpp  SmallCube.cpp  WiderCube.cpp  main.cpp
Second_project/: CMakeLists.txt
Second_project/include/: Camera.h  Include.h  Mesh.h  Model.h  Texture.h
Second_project/model/sphere1/: earth.mtl
Second_project/shaders/: cube.frag  cube.vs  floor.frag  floor.vs  sphere.frag
Second_project/source/: Floor.h  Object.h  main.cpp
Third_project/: CMakeLists.txt  Test.cpp  main_first.cpp
Third_project/include/: Camera.h  Model.h  Texture.h
Third_project/shaders/: volcano.frag  volcano.vs
Third_project/source/: Altitude.h  Reader.h  main.cpp
